# stablecoin-rates

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml  stablerates.service
.github/workflows/: deploy.yml  test.yml
stablecoin_rates/: model.py
stablecoin_rates/reporter/: formatter.py  print_rates.py
stablecoin_rates/scraper/: __init__.py  anchor.py  blockfi.py  ftx.py  huobi.py  model.py  okex.py  okx.py
stablecoin_rates/telegram/: bot.py
test/: test_ftx.py  test_scrapers.py
