[tool.poetry]
name = "stablecoin-rates"
version = "0.1.0"
description = "A scraper for stablecoin lending rates."
authors = ["pietrodn <powerpdn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

httpx = "^0.21.1"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.930"
pytest= "^6.2.5"
pytest-asyncio = "0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
